--- a/.prettierrc
+++ b/.prettierrc
@@ -2,5 +2,6 @@
   "singleQuote": true,
   "singleAttributePerLine": true,
   "semi": false,
-  "trailingComma": "es5"
+  "trailingComma": "es5",
+  "tabWidth": 4
 }
