--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,7 @@
 {
-  "singleQuote": true,
-  "singleAttributePerLine": true,
-  "semi": false,
-  "trailingComma": "es5",
-  "tabWidth": 4
+    "singleQuote": true,
+    "singleAttributePerLine": true,
+    "semi": false,
+    "trailingComma": "none",
+    "tabWidth": 2
 }
