--- a/.eslintrc
+++ b/.eslintrc
@@ -1,25 +1,36 @@
 {
-    "extends": [
-        "next",
-        "next/core-web-vitals",
-        "airbnb",
-        "airbnb-typescript",
-        "airbnb/hooks"
-    ],
-    "parser": "@typescript-eslint/parser",
-    "parserOptions": {
-        "project": "./tsconfig.json"
-    },
-    "rules": {
-        "react/jsx-one-expression-per-line": "off",
-        "react/react-in-jsx-scope": "off",
-        "react/function-component-definition": "off",
-        "react/jsx-props-no-spreading": "off",
-        "@typescript-eslint/no-unused-vars": "warn",
-        "@typescript-eslint/semi": "off",
-        "@typescript-eslint/indent": "off",
-        "@typescript-eslint/comma-dangle": "off",
-        "react/jsx-indent": "off",
-        "react/jsx-indent-props": "off"
-    }
+  "plugins": ["@typescript-eslint"],
+  "extends": [
+    "eslint:recommended",
+    "airbnb",
+    "airbnb-typescript",
+    "airbnb/hooks",
+    "eslint:recommended",
+    "prettier",
+    "plugin:@typescript-eslint/recommended",
+    "plugin:import/recommended",
+    "plugin:prettier/recommended",
+    "plugin:react/recommended",
+    "plugin:react-hooks/recommended",
+    "plugin:jsx-a11y/recommended",
+    "next",
+    "next/core-web-vitals"
+  ],
+  "parser": "@typescript-eslint/parser",
+  "parserOptions": {
+    "project": "./tsconfig.json"
+  },
+  "rules": {
+    "react/jsx-one-expression-per-line": "off",
+    "react/react-in-jsx-scope": "off",
+    "react/function-component-definition": "off",
+    "react/jsx-props-no-spreading": "off",
+    "@typescript-eslint/no-unused-vars": "warn",
+    "@typescript-eslint/semi": "off",
+    "@typescript-eslint/indent": "off",
+    "@typescript-eslint/comma-dangle": "off",
+    "react/jsx-indent": "off",
+    "react/jsx-indent-props": "off",
+    "eslintreact/jsx-no-constructed-context-values": "off"
+  }
 }
